--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,7 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
+settings_local.py
 db.sqlite3
 db.sqlite3-journal
 
@@ -143,6 +144,7 @@ venv/
 ENV/
 env.bak/
 venv.bak/
+config.env
 
 # Spyder project settings
 .spyderproject
